--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                         <p class="allfont">카카오지도 API를 활용하여 책빵 매장의 위치를 표시하였습니다. 각 매장의 위치는 마커로 표시하였으며, 각 매장이름에 클릭이벤트가 발생하면 지도의 중심위치가 각 매장이 위치한 곳으로 바뀌고 그에 대한 설명글도 바뀌도록 구현하였습니다.</p>
 
                         <!-- <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a> -->
-                        <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/tnfladl9926/Bookbbang-Spring" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -634,7 +634,7 @@
                         
                         <p class="allfont">사원 등급은 자신의 작업 진척도 관리, 결재 요청 등 실질적인 프로젝트 진행과정을 등록, 조회할 수 있도록 하였습니다.</p>
                         
-                        <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/tnfladl9926/PMS-Servlet" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -653,7 +653,7 @@
                         <p class="allfont">ERD설계 후 요구사항을 충족하는 다양한 ANSI-SQL, PL/SQL문을 직접 작성하였습니다.</p>
                         <p class="allfont">데이터베이스를 기간동안 배우면서 웹 개발에 필수적인 데이터 베이스를 설계하고 SQL언어를 작성하여 원하는 데이터를 도출해내는 작업을 많이 연습하며 데이터베이스에 대한 이해도가 향상되었음을 느꼈던 프로젝트 입니다.</p>
 
-                        <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/tnfladl9926/AcademyDB-Oracle" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -672,7 +672,7 @@
                         <p class="allfont">요구사항분석서부터 화면 설계, 더미데이터 제작, 구현, 자바document, 최종요약본까지 조원들과 협업하여 제작하였습니다.</p>
                         <p class="allfont">자바의 문법과 메소드의 효율적인 사용법에 대해 배울 수 있었으며, 전체적인 프로그램의 구현 흐름을 배우며 앞으로의 프로젝트의 큰 도움이 되었던 프로젝트 입니다.</p>
                         <p class="allfont">사용 언어: JAVA  |  사용 툴: Eclipse</p>
-                        <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/tnfladl9926/Banking-Java" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
@@ -689,7 +689,7 @@
                         <p class="allfont">처음 준비했던 프로젝트라 부족한 점이 많고, 몰랐던 부분도 많아 구현에 어려움이 많았지만 저에게 코딩의 재미를 알려주었기 때문에 개인적으로 의미가 있는 프로젝트 입니다.</p>
                         <p class="allfont">UI는 QTdesigner로 구현하였으며, UI와 DB를 연동하여 일정 추가나 저장 버튼을 누르면  추가된 TO-DO List의 내용이 DB에 저장되도록 구현하였습니다.</p>
                         <p class="allfont">사용언어: Python, SQL  |  사용 툴: Pycharm, SQLite, QT designer</p>
-                        <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a>
+                        <!-- <a href="#" class="read-more allfont" style="font-weight: 500;">Read more <i class="ti-angle-double-right"></i></a> -->
                     </div>
                 </div><!-- end of blog wrapper -->
 
