포토폴리오

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     <li class="allfont"><span>Email</span> : sulim9926@naver.com</li>
                     <li class="allfont"><span>Phone</span> : 010-5674-9926</li>
                     <li class="allfont"><span>Address</span> :  서울시 노원구 중계로 184 라이프청구신동아</li>
+                    <li class="allfont"><span>Git-Hub</span> https://github.com/tnfladl9926 </li>
                 </ul>
                 <!-- <ul class="social-icons pt-3">
                     <li class="social-item"><a class="social-link" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
@@ -598,7 +599,7 @@
 
                         <p class="allfont">관리자의 경우 대표적인 기능으로 책 등록, 이벤트 등록 등 사이트를 관리하는 기능을 사용할 수 있습니다.</p>
 
-                        <p class="allfont">사용자의 대표적인 기능은 책을 구매하는 기능입니다. 구매하고 싶은 책을 장바구니에 담아 쿠폰과 배송지 등을 설정하고 책 결제가 가증하도록 하였습니다. 결제 정보는 ajax가 사용되어 동적으로 서버로 전송되도록 구현하였습니다.</p>
+                        <p class="allfont">사용자의 대표적인 기능은 책을 구매하는 기능입니다. 구매하고 싶은 책을 장바구니에 담아 쿠폰과 배송지 등을 설정하고 책 결제가 가능하도록 하였습니다. 결제 정보는 AJAX가 사용되어 동적으로 서버로 전송되도록 구현하였습니다.</p>
 
                         <p class="allfont">카카오지도 API를 활용하여 책빵 매장의 위치를 표시하였습니다. 각 매장의 위치는 마커로 표시하였으며, 각 매장이름에 클릭이벤트가 발생하면 지도의 중심위치가 각 매장이 위치한 곳으로 바뀌고 그에 대한 설명글도 바뀌도록 구현하였습니다.</p>
 
